[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pj-agent"
version = "0.1.0"
description = "エージェントベースのプロジェクト"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.812",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
